--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-matplotlib==3.3.2
 pandas==1.1.3
 plotly==5.3.1
-streamlit==1.8.1
+scikit_learn==1.0.2
+streamlit==1.9.0
 streamlit_option_menu==0.3.2
-torch==1.11.0
